# MambaStock

./: .dockerignore  Dockerfile  LICENSE  README.md  README.zh-TW.md  api.py  env.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: 2330.csv
k8s/: deployment.yaml  service.yaml
src/: data.py  engine.py  mamba.py  model.py  pipeline.py  utils.py  yahoo.py
